[package]
name = "anyqueue"
version = "0.1.0"
edition = "2021"
description = "A robust, asynchronous job processing library with automatic retry logic and dead letter queue functionality"
license = "MIT"
repository = "https://github.com/your-username/anyqueue"
keywords = ["redis", "queue", "jobs", "async", "retry"]
categories = ["asynchronous", "database"]

[lib]
name = "anyqueue"
path = "src/lib.rs"

[[bin]]
name = "anyqueue-example"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
redis = { version = "0.31.0", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
rand = "0.9.1"

[features]
default = []
